@@ -54,7 +54,7 @@
           <div class="main-page-content">
             <h1 class="main-h1">Shop</h1>
             <div class="content-submain">
-            <a href="/shop/products/plant-stand.html" class="shop-card-link">              
+            <a href="/shop/products/plant-stand" class="shop-card-link">              
               <div class="shop-card" data-cardnum="0">
                 <div class="shop-card-inner">
                   <span>Plant Stand</span>
