@@ -1,3 +1,7 @@
+- 1/14/2023
+  * Fixed a bug where the header dissapeared when scrolling too far
+  * Changed the link /shop/products/plant-stand to no longer show ".html"
+
 - 1/13/2023
   * Added unofficial website banner on the bottom
   * Added a website changelog
